hw5_ws/src/log/build_2024-03-10_19-11-43/turtle_run/stderr.log
  File "/home/vboxuser/hw5_ws/src/install/turtle_run/lib/python3.10/site-packages/turtle_run/turtle_run_server.py", line 94
    def is_pose_in_checkpoint(checkpoint, point:Pose)
                                                     ^
SyntaxError: expected ':'

